fixed parent param

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
+<meta name="viewport" content="width=device-width", initial-scale=1, maximum-scale=1, user-scalable=0"/>
 
 <head>
-
+    <meta charset="UTF-8">
+    <script src="libs/emojiUnicode.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.1.1/dist/phaser.js"></script>
+    <script src="libs/base64.js"></script>
+    <script src="libs/underscore.min.js"></script>
+    <script src="libs/backbone.min.js"></script>
+    <script src="libs/backbone-localStorage.min.js"></script><!-- opt -->
+    <script src="libs/jquery.min.js"></script>
     <link href="sandbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
     <link rel="stylesheet" href="style.css">
     <script src="http://codemirror.net/lib/codemirror.js"></script>
-    <script src="webtoolkit.md5.js"></script>
+    <script src="libs/webtoolkit.md5.js"></script>
     <!-- For HTML/XML -->
     <script src="http://codemirror.net/mode/xml/xml.js"></script>
     <script src="http://codemirror.net/mode/htmlmixed/htmlmixed.js"></script>
@@ -15,116 +23,140 @@
     <!-- For JS -->
     <script src="http://codemirror.net/mode/javascript/javascript.js"></script>
     <link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/3024-day.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/3024-night.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/ambiance.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/base16-dark.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/base16-light.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/blackboard.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/cobalt.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/eclipse.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/elegant.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/erlang-dark.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/lesser-dark.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/midnight.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/monokai.css">
-    <link rel="stylesheet" href="http://codemirror.net/theme/neat.css">
+    <link rel="stylesheet" href="libs/themes/3024-day.css">
+    <link rel="stylesheet" href="libs/themes/3024-night.css">
+    <link rel="stylesheet" href="libs/themes/abcdef.css">
+    <link rel="stylesheet" href="libs/themes/ambiance-mobile.css">
+    <link rel="stylesheet" href="libs/themes/ambiance.css">
+    <link rel="stylesheet" href="libs/themes/base16-dark.css">
+    <link rel="stylesheet" href="libs/themes/base16-light.css">
+    <link rel="stylesheet" href="libs/themes/bespin.css">
+    <link rel="stylesheet" href="libs/themes/blackboard.css">
+    <link rel="stylesheet" href="libs/themes/cobalt.css">
+    <link rel="stylesheet" href="libs/themes/colorforth.css">
+    <link rel="stylesheet" href="libs/themes/darcula.css">
+    <link rel="stylesheet" href="libs/themes/dracula.css">
+    <link rel="stylesheet" href="libs/themes/duotone-dark.css">
+    <link rel="stylesheet" href="libs/themes/duotone-light.css">
+    <link rel="stylesheet" href="libs/themes/eclipse.css">
+    <link rel="stylesheet" href="libs/themes/elegant.css">
+    <link rel="stylesheet" href="libs/themes/erlang-dark.css">
+    <link rel="stylesheet" href="libs/themes/gruvbox-dark.css">
+    <link rel="stylesheet" href="libs/themes/hopscotch.css">
+    <link rel="stylesheet" href="libs/themes/icecoder.css">
+    <link rel="stylesheet" href="libs/themes/idea.css">
+    <link rel="stylesheet" href="libs/themes/isotope.css">
+    <link rel="stylesheet" href="libs/themes/lesser-dark.css">
+    <link rel="stylesheet" href="libs/themes/liquibyte.css">
+    <link rel="stylesheet" href="libs/themes/lucario.css">
+    <link rel="stylesheet" href="libs/themes/material.css">
+    <link rel="stylesheet" href="libs/themes/mbo.css">
+    <link rel="stylesheet" href="libs/themes/mdn-like.css">
+    <link rel="stylesheet" href="libs/themes/midnight.css">
+    <link rel="stylesheet" href="libs/themes/monokai.css">
+    <link rel="stylesheet" href="libs/themes/neat.css">
+    <link rel="stylesheet" href="libs/themes/neo.css">
+    <link rel="stylesheet" href="libs/themes/night.css">
+    <link rel="stylesheet" href="libs/themes/oceanic-next.css">
+    <link rel="stylesheet" href="libs/themes/panda-syntax.css">
+    <link rel="stylesheet" href="libs/themes/paraiso-dark.css">
+    <link rel="stylesheet" href="libs/themes/paraiso-light.css">
+    <link rel="stylesheet" href="libs/themes/pastel-on-dark.css">
+    <link rel="stylesheet" href="libs/themes/railscasts.css">
+    <link rel="stylesheet" href="libs/themes/rubyblue.css">
+    <link rel="stylesheet" href="libs/themes/seti.css">
+    <link rel="stylesheet" href="libs/themes/shadowfox.css">
+    <link rel="stylesheet" href="libs/themes/solarized.css">
+    <link rel="stylesheet" href="libs/themes/ssms.css">
+    <link rel="stylesheet" href="libs/themes/the-matrix.css">
+    <link rel="stylesheet" href="libs/themes/tomorrow-night-bright.css">
+    <link rel="stylesheet" href="libs/themes/tomorrow-night-eighties.css">
+    <link rel="stylesheet" href="libs/themes/ttcn.css">
+    <link rel="stylesheet" href="libs/themes/twilight.css">
+    <link rel="stylesheet" href="libs/themes/vibrant-ink.css">
+    <link rel="stylesheet" href="libs/themes/xq-dark.css">
+    <link rel="stylesheet" href="libs/themes/xq-light.css">
+    <link rel="stylesheet" href="libs/themes/yeti.css">
+    <link rel="stylesheet" href="libs/themes/zenburn.css">
 </head>
-<div id="wrap">
-    <!-- Code Editors -->
-    <section id="code_editors">
-        <script>
-            var currentEditor = 'readmeTab';
-
-function openTab(evt, tabName) {
-    // Declare all variables
-    var i, tabcontent, tablinks;
-
-    // Get all elements with class="tabcontent" and hide them
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-        tabcontent[i].style.display = "none";
-    }
-
-    // Get all elements with class="tablinks" and remove the class "active"
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-        tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-
-    // Show the current tab, and add an "active" class to the button that opened the tab
-    document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.className += "active";
-    currentEditor = tabName;
-}
+<div class="both">
+    <div class="left-go-bottom">
+        <!-- Code Editors -->
+        <div id="code_editors">
+            <!-- Tab content -->
+            <div id="htmlTab" class="tabcontent">
+                <div id="html" class="code_box">
+                    <textarea name="html"></textarea>
+                </div>
+            </div>
+            <div id="cssTab" class="tabcontent">
+                <div id="css" class="code_box">
+                    <textarea name="css"></textarea>
+                </div>
+            </div>
+            <div id="jsTab" class="tabcontent">
+                <div id="js" class="code_box">
+                    <textarea name="js"></textarea>
+                </div>
+            </div>
+            <div id="readmeTab" class="tabcontent">
+                <div id="readme" class="code_box">
+                    <textarea name="readme"></textarea>
+                </div>
+            </div>
+            <div id="filesTab" class="tabcontent">
+                    <div id="pnav"></div>
+                    <div id="content">
+                    <div id="searchbar">
+                    <input type="text" id="myInput" onkeyup="search()" placeholder="Search for title..">
+                    <br>
+                    <div id="files" class="file_box">
+                    </div>
+                </div>
+                
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="right-go-top">
+        <!-- Sandboxing -->
+        <div id="output">
+            <iframe></iframe>
+        </div>
+        <div id="sandbox">press &#x1F3C1; to launch console</div>
+        <!-- The sandbox template -->
+        <script type="text/template" id="tplSandbox">
+            <pre class="output"></pre>
+    <div class="input">
+        <textarea rows="1" placeholder="<%= placeholder %>"></textarea>
+    </div>
 </script>
-        <!-- Tab links -->
-        <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'htmlTab')">&#60;&#62;</button>
-            <button class="tablinks" onclick="openTab(event, 'cssTab')">&#123;&#125;</button>
-            <button class="tablinks" onclick="openTab(event, 'jsTab')">js</button>
-            <button class="tablinks" onclick="openTab(event, 'readmeTab')">&#x1f3f7;</button>
-            <button class="tablinks" onclick="openTab(event, 'filesTab')">&#x1f4c2;</button>
-            <!-- art palette - U+1F3A8 -->
-
-            <button class="save" onclick="save()">&#x1f4be;</button>
-            <button class="fork" onclick="fork()">🍝</button>
-            <button class="undo" onclick="undo(currentEditor)">&#x1f631;</button>
-            <button class="render" onclick="render()">&#9654;</button>
-        </div>
-        <!-- Tab content -->
-        <div id="htmlTab" class="tabcontent">
-            <div id="html" class="code_box">
-                <textarea name="html"></textarea>
-            </div>
-        </div>
-        <div id="cssTab" class="tabcontent">
-            <div id="css" class="code_box">
-                <textarea name="css"></textarea>
-            </div>
-        </div>
-        <div id="jsTab" class="tabcontent">
-            <div id="js" class="code_box">
-                <textarea name="js"></textarea>
-            </div>
-        </div>
-        <div id="readmeTab" class="tabcontent">
-            <div id="readme" class="code_box">
-                <textarea name="readme"></textarea>
-            </div>
-        </div>
-        <div id="filesTab" class="tabcontent">
-            <div id="files" class="file_box">
-                <button class="file"><h1>👤</h1><br>MyCoolProject</button><button class="file"><h1>👤</h1><br>MyCoolProject2</button>
-            </div>
-        </div>
-    </section>
-    <!-- Sandboxing -->
-    <section id="output">
-        <iframe></iframe>
-    </section>
-</div>
-<div id="sandbox">press play to launch console</div>
-<!-- The sandbox template -->
-<script type="text/template" id="tplSandbox">
-    <pre class="output"></pre>
-	<div class="input">
-		<textarea rows="1" placeholder="<%= placeholder %>"></textarea>
-	</div>
-</script>
-<!-- The command/result template (NB whitespace/line breaks matter inside <pre> tag): -->
-<script type="text/template" id="tplCommand"><% if (! _hidden) { %><span class="command"><%= command %></span>
+        <!-- The command/result template (NB whitespace/line breaks matter inside <pre> tag): -->
+        <script type="text/template" id="tplCommand"><% if (! _hidden) { %><span class="command"><%= command %></span>
 <span class="prefix"><%= this.resultPrefix %></span><span class="<%= _class %>"><%= result %></span>
 <% } %></script>
-<script src="/libs/underscore.min.js"></script>
-<script src="/libs/backbone.min.js"></script>
-<script src="/libs/backbone-localstorage.min.js"></script><!-- opt -->
-<script src="/libs/jquery.min.js"></script>
-<script src="/sandbox-console.js"></script>
-<script type="text/javascript">
-</script>
-<script src="script.js"></script>
+        <script src="libs/sandbox-console.js"></script>
+        <script src="script.js"></script>
+    </div>
 </div>
-</body>
+<!-- Tab links -->
 
+<div class="tab">
+    <button class="undo" onclick="undo(currentEditor)">&#x1f631;</button>
+    <button class="tablinks" onclick="openTab(event, 'htmlTab')">&#x1F3D7;</button>
+    <button class="tablinks" onclick="openTab(event, 'cssTab')">&#x1F5BC;</button>
+    <button class="tablinks" onclick="openTab(event, 'jsTab')">&#x1F412;</button>
+    <button class="tablinks" onclick="openTab(event, 'readmeTab')">&#x1f4e6;</button>
+    <button class="theme" id="theme" onclick="changeTheme()">&#x1F464;</button>
+    <button class="tablinks" onclick="openTab(event, 'filesTab')">&#x1f4c2;</button>
+    <button class="save" onclick="save()">&#x1f4be;</button>
+    <button class="outputlinks" onclick="toggle(event, 'sandbox')">&#x1F52E;</button>
+    <button class="outputlinks" onclick="toggle(event, 'output')">&#x1F4FA;</button>
+
+    <!-- <button class="fork" onclick="fork()">&#x1f35d;</button> -->
+    
+    <button class="render" onclick="render()">&#x1F3C1;</button>
+</div>
+
+</body>
 </html>
