--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div id="content">
                         <div id="searchbar">
                             <form target="iframe" action="upload.php" method="post" enctype="multipart/form-data">
-                                <iframe name="iframe" id="iframe" style="display:none" onload="list()" ></iframe>
+                                <iframe name="iframe" id="iframe" style="display:none"></iframe>
                                 Select image to upload:
                                 <input type="file" name="fileToUpload" id="fileToUpload">
                                 <input type="submit" value="Upload" name="submit">
@@ -149,7 +149,62 @@
             <div id="output">
                 <iframe></iframe>
             </div>
-            <div id="sandbox">press &#x1F3C1; to launch console</div>
+            <div id="sandbox">
+                <h1>Welcome to sandy.network</h1>
+                <h2>
+Mission Statement
+</h2>
+This site was created as a kid and mobile friendly web-development playground for learners of all ages. Because it can be reasonably assumed that this site will have visitors under the age of 13, it maintains strict privacy and community guidelines to protect its users.
+<h2>
+Privacy Policy
+</h2>
+This site does not collect or distribute personal information as defined by “COPPA”. This is defined as:
+<ul>
+<li>Full name</li>
+<li>Physical or email address</li>
+<li>User name where it function as online contact information</li>
+<li>Telephone number</li>
+<li>Social security number</li>
+<li>Persistent identifier such as cookie, IP address, processor or device serial number</li>
+<li>Photo, video, or audio file containing a child’s image or voice</li>
+<li>Geolocation information sufficient to identify a street name and city or town</li>
+</ul>
+This site is actively monitored to ensure that users are abiding by this policy. Projects or assets containing personal information as defined above will be removed.
+<h2>
+Community Guidelines
+</h2>
+In addition to the privacy policy outlined above, and bearing in mind that this site is intended as a resource for learners of all ages, users are expected to post only content that:
+<ul>
+<li>is appropriate for users of all ages and backgrounds.</li>
+<li>does not encourage or explain how to commit illegal or illicit acts.</li>
+<li>does not advertise, link to social media, or otherwise create avenues for compromising user safety.</li>
+</ul>
+Site administrators reserve the right to remove content that does not meet this criteria.
+
+<h2>
+License
+</h2>
+The license for all content on this site is the Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0)
+
+You are free to:
+<ul>
+<li>Share — copy and redistribute the material in any medium or format</li>
+<li>Adapt — remix, transform, and build upon the material
+for any purpose, even commercially.</li>
+<li>This license is acceptable for Free Cultural Works.</li>
+</ul>
+The licensor cannot revoke these freedoms as long as you follow the license terms.
+<br>
+Under the following terms:
+<ul>
+<li>Attribution — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.</li>
+<li>ShareAlike — If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.</li>
+<li>No additional restrictions — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.</li>
+</ul>
+<br>
+
+
+            </div>
             <!-- The sandbox template -->
             <script type="text/template" id="tplSandbox">
                 <pre class="output"></pre>
